# data-validation

./: Pipfile  README.md  data_validation.py  pyproject.toml  setup.py
data_validation.egg-info/: PKG-INFO  SOURCES.txt
src/: data_validation.py
tests/: test_data_validation.py
